# mvideo_python_test_task

./: .env.example  .gitignore  README.md  docker-compose.yml  ТЗ_Backend-разработчик_Python.docx
load_tests/: locustfile.py
locust_data/: Locust_2026-06-29-09h00_locustfile.py_http___web-api-service_8000.html  Locust_2026-06-29-09h00_locustfile.py_http___web-api-service_8000_requests.csv
services/background_processing_service/: Dockerfile  main.py  pyproject.toml
services/background_processing_service/tests/: test_fetch_and_persits.py
services/client_service/: main.py  pyproject.toml
services/client_service/src/application/: ports.py  (+1 more)
services/web_api_service/: Dockerfile  alembic.ini  main.py  pyproject.toml
services/web_api_service/src/application/: log_parser.py
services/web_api_service/src/application/dto/: logs.py
services/web_api_service/src/application/use_case/: logs.py
services/web_api_service/src/config/: settings.py
services/web_api_service/src/core/: repositories.py
services/web_api_service/src/core/domain/: models.py
services/web_api_service/src/infrastructure/database/: base.py  db_helper.py  mappers.py  models.py
services/web_api_service/src/infrastructure/database/repositories/: http_logs.py
services/web_api_service/src/interfaces/api/: app.py  constants.py  data.py  dependencies.py  health.py  schemas.py  stats.py
services/web_api_service/src/migrations/: env.py
services/web_api_service/src/migrations/versions/: 6c6e7935ec70_.py  bf2a8e613acb_create_http_logs_table.py
services/web_api_service/tests/: test_log_use_case.py
(+16 files in other folders)
